Fixed styling for navbar on mobile viewports.

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@
 	text-align: center;
 	margin: 30px auto;
 }
+
+@media (max-width: 768px) {
+	.portfolio {
+		--navbar-top-offset: 40px;
+		margin-top: var(--navbar-top-offset);
+	}
+}
