--- a/src/NavigationBar.css
+++ b/src/NavigationBar.css
@@ -22,6 +22,7 @@
 	margin: 0;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 .navbar__item {
@@ -38,10 +39,16 @@
 }
 
 .navbar__link {
-	font-size: 1.5rem;
+	font-size: 1.7rem;
 	color: var(--text-base-color);
 }
 
 .navbar__item a:hover {
 	color: color-mix(in srgb, currentColor, var(--detail-color) 60%);
+}
+
+@media (max-width: 768px) {
+	.navbar__link {
+		font-size: 1.2rem;
+	}
 }
